--- a/GitVersion.yml
+++ b/GitVersion.yml
@@ -1,5 +1,5 @@
 workflow: GitFlow/v1
-# next-version: 1.0.0
+next-version: 1.0.0
 major-version-bump-message: \+semver:\s?(breaking|major)
 minor-version-bump-message: \+semver:\s?(feature|minor)
 patch-version-bump-message: \+semver:\s?(fix|patch)
