--- a/GitVersion.yml
+++ b/GitVersion.yml
@@ -36,7 +36,7 @@ branches:
     is-main-branch: true
     pre-release-weight: 55000
   release:
-    mode: ManualDeployment
+    mode: ContinuousDelivery
     label: beta
     increment: Minor
     prevent-increment:
